# iam-gen-ai-bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/api/: main.py
apps/worker/: main.py
core/: cache.py  logging.py  schemas.py  settings.py
core/agents/: daily_review.py  editor_guide.py  ideation.py  intake.py  memory.py  research.py  scheduler.py  script_writer.py  storyboard.py
core/db/: models.py  repositories.py  session.py
core/workflow/: context_store.py  job_store.py  messages.py  state.py  supervisor.py
docs/: architecture.md
infra/: alembic.ini  docker-compose.yml
infra/alembic/: env.py
infra/alembic/versions/: 0001_init.py
integrations/: factory.py
integrations/llm/: base.py  mock.py
integrations/search/: base.py  mock.py
integrations/whatsapp/: base.py  mock.py
tests/: test_intake.py  test_scheduler.py
